feat: 팝업 관리 기능 임시 commit
